--- a/toggle.css
+++ b/toggle.css
@@ -27,6 +27,10 @@ body {
   justify-content: space-between;
   align-items: center;
 }
+#menu:hover {
+  cursor: pointer;
+}
+
 .m1 {
   width: 10px;
   height: 2px;
